fix(AVO-3214): fix type in copy

--- a/src/maintenance.html
+++ b/src/maintenance.html
@@ -26,7 +26,7 @@
 					gepland onderhoud.
 				</p>
 				<p class="subtitle">
-					We verwachten uiterlijk binnen enkele uren terug online zijn.
+					We verwachten uiterlijk binnen enkele uren terug online te zijn.
 				</p>
 				<p class="subtitle">Alvast bedankt voor je geduld!</p>
 			</article>
